--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "@mapbox/tilebelt": "^1.0.2",
     "@tabler/icons-react": "^2.23.0",
     "@turf/turf": "^6.5.0",
+    "alea": "^1.0.1",
     "axios": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^16.2.0",
     "express": "^4.18.2",
+    "form-data": "^4.0.0",
     "jotai": "^2.2.0",
     "mapbox-gl": "^2.15.0",
     "mapbox-gl-draw-rectangle-mode": "^1.0.4",
@@ -32,6 +34,7 @@
     "react-dom": "^18.2.0",
     "sha1": "^1.1.1",
     "sharp": "^0.32.1",
+    "simplex-noise": "^4.0.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
