--- a/package.json
+++ b/package.json
@@ -13,32 +13,38 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@mantine/core": "^6.0.16",
-    "@mantine/hooks": "^6.0.16",
-    "@mapbox/mapbox-gl-draw": "^1.4.1",
+    "@mantine/core": "^6.0.19",
+    "@mantine/hooks": "^6.0.19",
+    "@mapbox/mapbox-gl-draw": "^1.4.2",
     "@mapbox/tile-cover": "^3.0.2",
     "@mapbox/tilebelt": "^1.0.2",
-    "@tabler/icons-react": "^2.23.0",
+    "@tabler/icons-react": "^2.32.0",
     "@turf/turf": "^6.5.0",
     "alea": "^1.0.1",
     "axios": "^1.4.0",
+    "canvas": "^2.11.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.2.0",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "form-data": "^4.0.0",
-    "jotai": "^2.2.0",
+    "jotai": "^2.3.1",
     "mapbox-gl": "^2.15.0",
     "mapbox-gl-draw-rectangle-mode": "^1.0.4",
     "pngjs": "^7.0.0",
     "react": "^18.2.0",
+    "react-canvas-draw": "^1.2.1",
     "react-dom": "^18.2.0",
+    "react-map-gl": "^6.1.21",
+    "react-map-gl-draw": "^1.0.4",
+    "react-mapbox-gl-draw": "^2.0.4",
+    "react-router-dom": "^6.15.0",
     "sha1": "^1.1.1",
-    "sharp": "^0.32.1",
+    "sharp": "^0.32.5",
     "simplex-noise": "^4.0.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.0.0",
-    "vite": "^4.3.9"
+    "@vitejs/plugin-react": "^4.0.4",
+    "vite": "^4.4.9"
   }
 }
