--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@turf/turf": "^6.5.0",
     "alea": "^1.0.1",
     "axios": "^1.4.0",
+    "body-parser": "^1.20.2",
     "canvas": "^2.11.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
