--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@google/earthengine": "^0.1.371",
     "@mantine/core": "^6.0.19",
     "@mantine/hooks": "^6.0.19",
     "@mapbox/mapbox-gl-draw": "^1.4.2",
@@ -28,6 +29,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "form-data": "^4.0.0",
+    "geotiff": "^2.0.7",
     "jotai": "^2.3.1",
     "mapbox-gl": "^2.15.0",
     "mapbox-gl-draw-rectangle-mode": "^1.0.4",
