--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "type": "module",
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
@@ -29,7 +30,6 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "form-data": "^4.0.0",
-    "geotiff": "^2.0.7",
     "jotai": "^2.3.1",
     "mapbox-gl": "^2.15.0",
     "mapbox-gl-draw-rectangle-mode": "^1.0.4",
