--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express": "^4.18.2",
     "form-data": "^4.0.0",
     "jotai": "^2.3.1",
+    "jszip": "^3.10.1",
     "mapbox-gl": "^2.15.0",
     "mapbox-gl-draw-rectangle-mode": "^1.0.4",
     "pngjs": "^7.0.0",
