--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@google/earthengine": "^0.1.371",
     "@mantine/core": "^6.0.19",
     "@mantine/hooks": "^6.0.19",
-    "@mapbox/mapbox-gl-draw": "^1.4.2",
+    "@mapbox/mapbox-gl-draw": "^1.4.3",
+    "@mapbox/mapbox-gl-geocoder": "^5.0.1",
     "@mapbox/tile-cover": "^3.0.2",
     "@mapbox/tilebelt": "^1.0.2",
     "@tabler/icons-react": "^2.32.0",
@@ -32,15 +33,14 @@
     "form-data": "^4.0.0",
     "jotai": "^2.3.1",
     "jszip": "^3.10.1",
+    "lodash": "^4.17.21",
     "mapbox-gl": "^2.15.0",
     "mapbox-gl-draw-rectangle-mode": "^1.0.4",
     "pngjs": "^7.0.0",
     "react": "^18.2.0",
     "react-canvas-draw": "^1.2.1",
     "react-dom": "^18.2.0",
-    "react-map-gl": "^6.1.21",
-    "react-map-gl-draw": "^1.0.4",
-    "react-mapbox-gl-draw": "^2.0.4",
+    "react-map-gl": "^7.1.6",
     "react-router-dom": "^6.15.0",
     "sha1": "^1.1.1",
     "sharp": "^0.32.5",
