queue-system initial

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "alea": "^1.0.1",
     "axios": "^1.4.0",
     "body-parser": "^1.20.2",
+    "bull": "^4.11.5",
     "canvas": "^2.11.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
