--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "canvas": "^2.11.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "eventsource": "^2.0.2",
     "express": "^4.18.2",
     "form-data": "^4.0.0",
     "jotai": "^2.3.1",
@@ -38,6 +39,7 @@
     "mapbox-gl": "^2.15.0",
     "mapbox-gl-draw-rectangle-mode": "^1.0.4",
     "pngjs": "^7.0.0",
+    "pocketbase": "^0.21.1",
     "react": "^18.2.0",
     "react-canvas-draw": "^1.2.1",
     "react-dom": "^18.2.0",
