--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@mantine/core": "^7.5.3",
+    "@mantine/dates": "^7.17.7",
     "@mantine/hooks": "^7.5.3",
     "@mapbox/mapbox-gl-draw": "^1.4.3",
     "@mapbox/mapbox-gl-geocoder": "^5.0.1",
@@ -26,6 +27,7 @@
     "axios": "^1.4.0",
     "bull": "^4.11.5",
     "canvas": "^2.11.2",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.3.1",
     "eventsource": "^2.0.2",
     "form-data": "^4.0.0",
@@ -45,7 +47,8 @@
     "recharts": "^2.12.1",
     "sha1": "^1.1.1",
     "simplex-noise": "^4.0.1",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "wx-react-gantt": "^1.3.1"
   },
   "devDependencies": {
     "@types/react": "^19.0.4",
