--- a/jsconfig.json
+++ b/jsconfig.json
@@ -3,7 +3,11 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"],
-      "@components/*": ["src/components/*"]
+      "@components/*": ["src/components/*"],
+      "@pages/*": ["src/pages/*"],
+      "@utils/*": ["src/utils/*"],
+      "@state": ["src/state"],
+      "@pocketbase": ["src/pocketbase"]
     }
   },
   "include": ["src/**/*"],
