--- a/package.json
+++ b/package.json
@@ -51,11 +51,17 @@
     "wx-react-gantt": "^1.3.1"
   },
   "devDependencies": {
+    "@eslint/css": "^0.7.0",
+    "@eslint/js": "^9.26.0",
+    "@eslint/json": "^0.12.0",
     "@types/react": "^19.0.4",
     "@types/react-dom": "^19.0.2",
     "@types/three": "^0.172.0",
     "@vitejs/plugin-react": "^4.0.4",
     "autoprefixer": "^10.4.20",
+    "eslint": "^9.26.0",
+    "eslint-plugin-react": "^7.37.5",
+    "globals": "^16.0.0",
     "postcss": "^8.4.44",
     "tailwindcss": "^3.4.10",
     "vite": "^4.4.9"
