--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@mantine/core": "^7.5.3",
-    "@mantine/dates": "^7.17.7",
+    "@mantine/dates": "^7.5.3",
     "@mantine/hooks": "^7.5.3",
     "@mapbox/mapbox-gl-draw": "^1.4.3",
     "@mapbox/mapbox-gl-geocoder": "^5.0.1",
@@ -23,11 +23,10 @@
     "@mapbox/tilebelt": "^1.0.2",
     "@tabler/icons-react": "^2.47.0",
     "@turf/turf": "^6.5.0",
-    "alea": "^1.0.1",
     "axios": "^1.4.0",
-    "bull": "^4.11.5",
-    "canvas": "^2.11.2",
+    "canvas": "^3.1.2",
     "date-fns": "^4.1.0",
+    "dayjs": "^1.11.13",
     "dotenv": "^16.3.1",
     "eventsource": "^2.0.2",
     "form-data": "^4.0.0",
@@ -47,8 +46,7 @@
     "recharts": "^2.12.1",
     "sha1": "^1.1.1",
     "simplex-noise": "^4.0.1",
-    "uuid": "^9.0.0",
-    "wx-react-gantt": "^1.3.1"
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@eslint/css": "^0.7.0",
